--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,5 +3,7 @@
 @import 'reset';
 @import 'libs';
 @import 'global';
-
+@import 'sections/header';
+@import 'sections/main';
+@import 'sections/popup';
 
