--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,4 +6,9 @@
 @import 'sections/header';
 @import 'sections/main';
 @import 'sections/popup';
+@import 'sections/slide-menu';
+
+//media
+@import 'media/header-media';
+@import 'media/main-media';
 
