--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -18,9 +18,14 @@ body {
 }
 
 .container{
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 0 15px;
+	max-width: 1140px;
+	margin: 0 auto;
+	padding: 0 15px;
+	@media (max-width: 320px) {
+		width: 290px;
+		padding: 0;
+		margin: 0 15px 0 15px;
+	}
 }
 
 
