--- a/app/scss/sections/_main.scss
+++ b/app/scss/sections/_main.scss
@@ -10,12 +10,16 @@
     font-family: Roboto;
     font-weight: 400;
     &__title {
+        margin: 0 auto;
         font-family: Play;
         font-weight: 700;
         font-size: 26px;
         line-height: 36px;
         text-align: center;
         letter-spacing: 0.25px;
+        &-divider {
+            display: none;
+        }
     }
     &__descr {
         margin: 20px auto 0 auto;
@@ -28,8 +32,9 @@
     &__wrapper {
         margin-top: 50px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         gap: 30px;
+        flex-wrap: wrap;
     }
     &__wrapper-item {
         width: 255px;
