--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,3 +3,18 @@ $font-color: #FFFFFF;
 $back-color: #000000;
 
 $btn-color: #77B900;
+
+@mixin button($margin) {
+    display: block;  
+    margin: $margin auto 0 auto;
+    padding: 17.5px 60px;
+    background-color: $btn-color;
+    border: 2px solid rgba(0,0,0,0);
+    cursor: pointer;
+    font-family: Play;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.25px;
+    color: $font-color;
+}
